--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:url" content="https://praderiom.github.io/badukGuessr/">
   <meta name="description" content="">
   <meta name="author" content="">
   <title>Baduk Guessr</title>
