Added indexing meta.

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="google-site-verification" content="nbSfnhA-paqdhCI_ve2WMhT1SF1th-YrkmfZKMYYB8M" />
   <base href="#">
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
